[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web2app"
version = "0.1.0"
description = "Convert websites into Linux desktop applications"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"
authors = [
    { name = "Vitor Cardoso", email = "vitordonnangeloc@proton.me" }
]
keywords = ["webapp", "desktop", "linux", "chromium", "pwa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
web2app = "web2app:main"

[project.urls]
Homepage = "https://github.com/geavenx/web2app"
Repository = "https://github.com/geavenx/web2app"
Issues = "https://github.com/geavenx/web2app/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.uv]
package = true

[tool.uv.pip]
generate-hashes = true
